AMBARI-17292. Operations during upgrade are permitted by all roles (aonishuk)